--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,16 +19,26 @@
     <LinearLayout
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_splash_skip"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
         android:id="@+id/viewPagerCountDots"
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="horizontal" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/guideline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="120dp"
+        android:visibility="invisible"
+        />
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:id="@+id/btn_splash_skip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -44,6 +54,6 @@
         android:onClick="splashSkip"
         android:textColor="@color/color_white"
         android:textSize="18sp"
-        android:visibility="invisible" />
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
